--- a/src/style.css
+++ b/src/style.css
@@ -1,39 +1,71 @@
 @charset "UTF-8";
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 :root {
+    /* Paleta de Cores */
+
+    --cor-base:black;
 
 }
 
 * {
-    font-family: 'Poppins','Arial';
-   
+    font-family: 'Poppins', 'Arial';
+
 }
 
 body {
-    margin: 10px 30px;
+    margin: 0px;
+    padding: 0px;
     text-align: center;
 }
 
 nav {
-text-align: left;
-text-decoration: none;
+    top: 0;
+    width: 100%;
+    
+    padding: 10px 0px 10px;
+    
+    text-align: left;
+    text-decoration: none;
+    
+    background-color: black;
+}
+nav>.nav {
+    padding: 8px;
 }
 
-nav >.a>a {
+nav>.nav>a {
+   
+    padding: 4px;
     text-decoration: none;
-    color: black;
+    color: rgb(254, 249, 249); 
+}
+
+nav>.nav>a:hover {
+    
+    color: blue;
+    transition-duration: 0.3s;
 }
 
 main {
+    text-align: center;
+    
+}
+
+.content{}
+
+.content-404 {
+    margin: 15% 0 ;
 
 }
 
-.video > iframe {
+.content-video>iframe {
+    
     border-radius: 30px;
 }
 
 
 footer {
-
+    display: block; 
 }
